--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
     "build": "npm run clean && npm run docgen && tsc && rollup --bundleConfigAsCjs -c rollup.config.js",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "build:component": "rollup -c build/rollup.config.js",
+    "prepare": "yarn build:component || npm run build:component"
   },
   "devDependencies": {
-    "@capacitor/android": "^5.0.0",
-    "@capacitor/core": "^5.0.0",
+    "@capacitor/android": "^5.0.1",
+    "@capacitor/core": "^5.0.1",
     "@capacitor/docgen": "^0.2.0",
-    "@capacitor/ios": "^5.0.0",
+    "@capacitor/ios": "^5.0.1",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^2.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
@@ -60,7 +62,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "@capacitor/core": "^5.0.0"
+    "@capacitor/core": "^5.0.1"
   },
   "prettier": "@ionic/prettier-config",
   "eslintConfig": {
