--- a/package.json
+++ b/package.json
@@ -40,11 +40,9 @@
     "build": "npm run clean && npm run docgen && tsc && rollup --bundleConfigAsCjs -c rollup.config.js",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
-    "prepublishOnly": "npm run build",
-    "build:component": "rollup -c build/rollup.config.js",
-    "prepare": "yarn build:component || npm run build:component"
+    "prepublishOnly": "npm run build"
   },
-  
+
   "devDependencies": {
     "@capacitor/android": "^5.0.1",
     "@capacitor/core": "^5.0.1",
